@@ -272,6 +272,7 @@ BEGIN
     IDS_LIMIT_TITLE         "Trial Version Limitation"
     IDS_LIMIT_MSG           "This version of PasswordSafe does not support more than %d entries in a database.\nTo get an unlimited version for the U3 platform, please visit http://software.u3.com\nDo you want to open this database anyway?\n(Saving this database will result in the removal of unread records!)"
     IDS_LIMIT_MSG2          "This version of PasswordSafe does not support more than %d entries in a database.\nTo get an unlimited version for the U3 platform, please visit http://software.u3.com\nNote: Saving this database will result in the removal of unread records!"
+    IDS_IMPORTFILE          "Text file being imported: %s"
 END
 
 STRINGTABLE
